# soapy

./: .env  .env.sample  .gitignore  dump.rdb  pyproject.toml
soapy/: __main__.py  hashing.py  main.py
soapy/utils/: __init__.py  coloring.py
static/: styles.css
