[tool.poetry]
name = "soapy"
version = "0.1.0"
description = "Self-hosted Pastebin alternative written in Python"
authors = ["itssoap <admin@itssoap.ninja>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
